Fixing not scrollable

--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -18,70 +18,58 @@ Answer a survey view
 
 <div class="spinner-grow text-danger" role="status">
     <span class="visually-hidden"></span>
-  </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
 
-            <form class="form"  method="POST" >
+            <form class="form" method="POST">
                 <div class="form-group">
                     <label for="nameTextField">Survey Title</label>
-                    <input type="text" class="form-control"
-                    id="nameTextField"
-                    placeholder="Enter the Survey Title"
-                    name="name" 
-                    value="<%= survey.name %>"
-                    readonly>
+                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Survey Title"
+                        name="name" value="<%= survey.name %>" readonly>
                 </div>
 
-             
 
 
-                 <!-- Repeatable Template Row -->
 
-                 <% for(let count = 0; count < survey.questions.length; count++) { %>
-                        <div class="form-group">
-                        <label for="questionTextField">Question <%=count+1 %></label>
-                        <input type="text" class="form-control"
-                        id="questionTextField"
-                        placeholder="Enter the First Question"
-                        name="questions" 
-                        value="<%= survey.questions[count] %>"
+                <!-- Repeatable Template Row -->
+
+                <% for(let count = 0; count < survey.questions.length; count++) { %>
+                <div class="form-group">
+                    <label for="questionTextField">Question <%=count+1 %></label>
+                    <input type="text" class="form-control" id="questionTextField"
+                        placeholder="Enter the First Question" name="questions" value="<%= survey.questions[count] %>"
                         readonly>
-                    </div>
+                </div>
 
-                    <div class="form-group">
-                        <label for="answerTextField">Answer <%=count +1%></label>
-                        <input type="text" class="form-control"
-                        id="AnswerTextField"
-                        placeholder="Please enter a response"
-                        name="answers" 
-                        value=""
-                        required>
-                    </div>
-                    <% } %>
-        
-                   <%    var today = new Date();
+                <div class="form-group">
+                    <label for="answerTextField">Answer <%=count +1%></label>
+                    <input type="text" class="form-control" id="AnswerTextField" placeholder="Please enter a response"
+                        name="answers" value="" required>
+                </div>
+                <% } %>
+
+                <%    var today = new Date();
                     var time = today.getMonth() +","+ today.getDate()+","+ today.getFullYear()+"_"+today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
                     %>
 
-<div hidden class="form-group " >
-    <label for="answerTextField">Time</label>
-    <input type="text" class="form-control"
-    id="AnswerTextField"
-    placeholder="Please enter a response"
-    name="time" 
-    value=<%=time %>
-    readonly>
-</div>
+                <div hidden class="form-group ">
+                    <label for="answerTextField">Time</label>
+                    <input type="text" class="form-control" id="AnswerTextField" placeholder="Please enter a response"
+                        name="time" value=<%=time %> readonly>
+                </div>
 
                 <button class="btn btn-primary btn-submit" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
-                
-                    <a href="/survey-list" class="btn btn-warning">
-                        <i class="fas fa-undo"></i> Cancel</a>
 
+                <a href="/survey-list" class="btn btn-warning">
+                    <i class="fas fa-undo"></i> Cancel</a>
+
+
+
+                   
             </form>
         </div>
 
@@ -89,6 +77,6 @@ Answer a survey view
 </div>
 
 
-<%- include ../partials/bottom_nav.ejs %>  
+<%- include ../partials/bottom_nav.ejs %>
 
 <%- include ../partials/footer.ejs %>
