Fixed answer index

--- a/server/views/survey/answer_list.ejs
+++ b/server/views/survey/answer_list.ejs
@@ -34,7 +34,7 @@ List of all answers Views
                             <button class="btn btn-link" type="button" data-toggle="collapse"
                                 data-target="#collapseOne<%= count %>" aria-expanded="true"
                                 aria-controls="collapseOne<%= count %>">
-                                Answered Survey #<%= count %>
+                                Answered Survey #<%= count +1%>
                             </button>
                         </h5>
                     </div>
